--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/webpack-babel-jest",
-    "testFileExtensions": ["es6", "js"],
-    "moduleFileExtensions": ["js", "json", "es6"]
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,16 +33,25 @@
   },
   "homepage": "https://github.com/canon20paul/Game-of-Thrones#readme",
   "devDependencies": {
-    "webpack-babel-jest": "*",
-    "jest-cli": "*",
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "hint": "^7.1.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest-cli": "*",
     "style-loader": "^3.3.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
     "webpack": "^5.74.0",
+    "webpack-babel-jest": "*",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "xml-loader": "^1.2.1"
